# ydtpack

./: .gitignore  ChangeLog.rst  DEVELOP.md  MANIFEST.in  Makefile  README.md  setup.cfg  setup.py  tox.ini
.github/workflows/: black.yaml
benchmark/: benchmark.py
docker/: runtests.sh
docs/: Makefile  advanced.rst  api.rst  conf.py  index.rst
test/: contexts_for_tests.py  test_buffer.py  test_case.py  test_except.py  test_extension.py  test_format.py  test_limits.py  test_memoryview.py  test_newspec.py  test_obj.py  test_pack.py  test_read_size.py  test_seq.py  test_sequnpack.py  test_stricttype.py  test_subtype.py  test_timestamp.py  test_typed_objects.py  test_unpack.py
tmsgpack/: __init__.py  _packer.pyx  _unpacker.pyx  fallback.py  unpack.h
ydtpack/: __init__.py  _packer.pyx  _unpacker.pyx  exceptions.py  ext.py  fallback.py  pack.h  pack_template.h  sysdep.h  unpack.h  unpack_define.h  unpack_template.h
