[metadata]
name = tmsgpack
version = attr: tmsgpack.__version__
license = Apache 2.0
author = Inada Naoki, Yaakov Belch
author_email = yaakov.belch@gmail.com
description = MessagePack serializer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://tmsgpack.org/

project_urls =
    Documentation = https://tmsgpack-python.readthedocs.io/
    Source = https://github.com/Yaakov-Belch/tmsgpack-python
    Tracker = https://github.com/Yaakov-Belch/tmsgpack-python/issues


classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License

[flake8]
max_line_length = 100

